# AgentRAG

./: .gitignore  CLAUDE.md  PRD.md  PROGRESS.md  README.md
.agent/plans/: 1.模块1-应用外壳+可观测性.md  2.模块2-自建检索+记忆.md
.claude/commands/: build.md  onboard.md
backend/: .env.example  .gitignore  check_db.py  pyproject.toml
backend/migrations/: 001_create_tables.sql  001_multimodal_embedding.sql  001_threads.sql  002_match_chunks.sql  003_add_chunk_settings.sql  004_content_hash_dedup.sql  005_file_metadata.sql  006_match_chunks_metadata_filter.sql  007_fix_match_chunks_overload.sql  008_cascade_delete_chunks.sql  009_keyword_search.sql  010_fix_rpc_media_columns.sql  010_subagent_support.sql
backend/src/: agent.py  config.py  main.py  models.py  openai_client.py  orchestrator.py  supabase_client.py  tools.py
backend/src/routers/: chunks.py  files.py  settings.py  threads.py
docs/superpowers/plans/: 2026-05-22-multimodal-embedding.md  2026-05-22-task-decomposition.md
docs/superpowers/specs/: 2026-05-21-frontend-redesign-design.md  2026-05-22-multimodal-embedding-design.md  2026-05-22-retrieval-reranker-settings-design.md  2026-05-22-task-decomposition-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: DecompositionCard.tsx  FilterBar.tsx  MarkdownMessage.tsx  MediaLightbox.tsx  ReasoningPanel.tsx  SourceCard.tsx  SubtaskCard.tsx  ToolCallCard.tsx  WelcomeScreen.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: store.ts
frontend/src/pages/: Chat.tsx  Import.tsx  Login.tsx  (+1 more)
